fixed the registration form alignment

--- a/app/assets/stylesheets/panel-reg.css.scss
+++ b/app/assets/stylesheets/panel-reg.css.scss
@@ -23,7 +23,9 @@ input, textarea, select, button{
 /* Panel Registration Form/Worker Edit Form Styles */
 
 #panelregform{
-	margin-left: 5px;
+	//margin-left: 5px;
+	margin-left: 20%;
+	margin-right: 20%;
 }
 
 #panelregform input{
